[gd_scene load_steps=5 format=3 uid="uid://d0pftcier2ckd"]

[ext_resource type="Script" uid="uid://mgmjm2mmjfna" path="res://main_scene.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://cjhxecs34uwxg" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="Script" uid="uid://b2igmyojuj8p4" path="res://map_preview.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://mohqke3jihyu" path="res://canvas_layer.gd" id="1_ig7tw"]

[node name="MainNote" type="Node2D"]
script = ExtResource("1_1bvp3")

[node name="MapPreview" type="SubViewportContainer" parent="."]
offset_right = 512.0
offset_bottom = 512.0
script = ExtResource("1_h2yge")

[node name="SubViewport" type="SubViewport" parent="MapPreview"]
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="MapPreview/SubViewport"]

[node name="StoryCreator" type="CanvasLayer" parent="."]
script = ExtResource("1_ig7tw")

[node name="InputPanel" type="Panel" parent="StoryCreator"]
offset_left = 5.0
offset_top = 6.0
offset_right = 5.0
offset_bottom = 6.0

[node name="TextEdit" type="TextEdit" parent="StoryCreator/InputPanel"]
layout_mode = 1
offset_left = 30.0
offset_top = 18.0
offset_right = 156.0
offset_bottom = 72.0
text = "森林 山脉 河流"
placeholder_text = "test ts"
scroll_smooth = true
scroll_v_scroll_speed = 38.0
minimap_width = 92

[node name="DebugBtn" type="Button" parent="StoryCreator/InputPanel"]
layout_mode = 0
offset_left = 233.0
offset_top = 56.0
offset_right = 273.0
offset_bottom = 87.0
text = "调试"

[node name="HintLabel" type="Label" parent="StoryCreator/InputPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="MainScene" type="CanvasLayer" parent="."]
script = ExtResource("1_0xm2m")

[node name="Background" type="TextureRect" parent="MainScene"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Content" type="Control" parent="MainScene"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BottomMenu" type="HBoxContainer" parent="MainScene"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="BookBtn" type="Button" parent="MainScene/BottomMenu"]
layout_mode = 2
text = "列表"

[node name="AddBtn" type="Button" parent="MainScene/BottomMenu"]
layout_mode = 2
text = "+"

[node name="ChatBtn" type="Button" parent="MainScene/BottomMenu"]
layout_mode = 2
text = "聊天"

[node name="UserBtn" type="Button" parent="MainScene/BottomMenu"]
layout_mode = 2
text = "用户"
